--- a/heritage.html
+++ b/heritage.html
@@ -69,28 +69,40 @@
         <div class="heritage-item">
             <img src="image1.jpeg" alt="Taj Mahal">
             <div>
-                <h3>Taj Mahal</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Taj Mahal</h2>
+                    <a href="https://en.wikipedia.org/wiki/Taj_Mahal" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="image2.jpeg" alt="Red Fort">
             <div>
-                <h3>Red Fort</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Red Fort</h2>
+                    <a href="https://en.wikipedia.org/wiki/Red_Fortl" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="image3.jpeg" alt="Sanchi stupa">
             <div>
-                <h3>Sanchi stupa</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Sanchi Stupa</h2>
+                    <a href="https://en.wikipedia.org/wiki/Sanchi" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="image4.jpeg" alt="India gate">
             <div>
-                <h3>India gate</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">India Gate</h2>
+                    <a href="https://en.wikipedia.org/wiki/India_Gate" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
