--- a/local-market.html
+++ b/local-market.html
@@ -69,28 +69,40 @@
         <div class="heritage-item">
             <img src="https://qph.cf2.quoracdn.net/main-qimg-86aa0cabc545d6615cb26677194297de" alt="sarojini market">
             <div>
-                <h3>Sarojini Market</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Sarojini Market</h2>
+                    <a href="https://en.wikipedia.org/wiki/Sarojini_Nagar" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="https://www.textileinfomedia.com/images/market-img/chandani-chowk-market.jpg" alt="chandani chowk">
             <div>
-                <h3>Cahndani Chowk</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Chandni Chowk</h2>
+                    <a href="https://en.wikipedia.org/wiki/Chandni_Chowk" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuygkxO4R9QNTeab_xYEhJuV0WgayldF_IXCbVfgR8IQmoWAg3BJdbbGT4gVdS0NyvFF4&usqp=CAU" alt="new market kolkata">
             <div>
-                <h3>New Market kolkata</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">New Market Kolkata</h2>
+                    <a href="https://en.wikipedia.org/wiki/New_Market,_Kolkata" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Laad_Bazaar.jpg/640px-Laad_Bazaar.jpg" alt="laad bazaar">
             <div>
-                <h3>Laad Bazaar</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Laad Bazaar</h2>
+                    <a href="https://en.wikipedia.org/wiki/Laad_Bazaar" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
