--- a/restaurant.html
+++ b/restaurant.html
@@ -69,28 +69,40 @@
         <div class="heritage-item">
             <img src="res1.webp" alt="Indian accent">
             <div>
-                <h3>Restaurant Name 1</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Indian accent</h2>
+                    <a href="https://en.wikipedia.org/wiki/Indian_Accent_(restaurant)" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
-            <img src="res2.jpg" alt="Karavali">
+            <img src="res2.jpg" alt="Karavalli">
             <div>
-                <h3>Restaurant Name 2</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Karavalli</h2>
+                    <a href="https://sommelierindia.com/karavalli-a-bengaluru-restaurant-icon/" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="res3.avif" alt="adaa">
             <div>
-                <h3>Restaurant Name 3</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Adaa</h2>
+                    <a href="https://www.tajhotels.com/en-in/hotels/taj-falaknuma-palace-hyderabad/restaurants/adaa" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
         <div class="heritage-item">
             <img src="res4.avif" alt="yauatcha">
             <div>
-                <h3>Restaurant Name 4</h3>
+                <div class="container mt-4 d-flex justify-content-between align-items-center">
+                    <h2 class="fw-bold">Yauatcha</h2>
+                    <a href="https://en.wikipedia.org/wiki/Yauatcha" class="btn btn-primary">details</a>
+                </div>
                 <p>Description about the heritage goes here. This can include history, importance, and other details.</p>
             </div>
         </div>
