--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="feature col">
                 <div
                     class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <img src="shivam.jpeg" alt="briefcase" height="40" width="40">
+                    <img src="shivam.jpeg" alt="briefcase" height="50" width="50">
                 </div>
                 <h3 class="fs-2">SHIVAM</h3>
                 <p>Founder</p>
@@ -137,7 +137,7 @@
             <div class="feature col">
                 <div
                     class="feature-icon d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-2 mb-3">
-                    <img src="jabardasti.jpg" alt="chat-square-heart" height="30">
+                    <img src="jabardasti.jpg" alt="chat-square-heart" height="50" width="50">
                 </div>
                 <h3 class="fs-2">AANCHAL</h3>
                 <p>Co-founder</p>
